--- a/index.html
+++ b/index.html
@@ -4,8 +4,98 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/odin_LandingPage/CSS/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <!-- Main Container -->
+    <div class="container">
+        <div class="header_cont">
+
+          <div class="header_top">
+            <div class="header_Logo">
+                <h3>Header Logo</h3>
+            </div>
+
+            <div class="nav">
+                <ul>
+                    <li><a href="#">header link one</a></li>
+                    <li><a href="#">header link two</a></li>
+                    <li><a href="#">header link three</a></li>
+                </ul>
+            </div>
+          </div>
+
+          <div class="header_bottom">
+            <div class="header_bottom_left">
+                <h1>This website is awesome</h1>
+                <p>This website has some subtext that goes here under the main title. It's a smaller font end the color is lower contrast</p>
+                <button type="submit">Sign up</button>
+            </div>
+            <div class="header_bottom_right">
+                <img src="/odin_LandingPage/IMAGES/1.jpg" alt="Mountain">
+            </div>
+          </div>
+
+
+
+        </div>
+
+        <!-- main one -->
+        <div class="main_one">
+            <div class="main_one_header">
+                <h2>Some random information.</h2>
+            </div>
+            <div class="main_one_cont">
+                <div class="one_cont">
+                    <img src="/odin_LandingPage/IMAGES/1a.png" alt="image_1">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="one_cont">
+                    <img src="/odin_LandingPage/IMAGES/1b.png" alt="image_2">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="one_cont">
+                    <img src="/odin_LandingPage/IMAGES/1c.png" alt="image_3">
+                    <p>this is some subtext under an illustration or image</p> 
+                </div>
+                <div class="one_cont">
+                    <img src="/odin_LandingPage/IMAGES/1d.png" alt="image_4">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- main two --> 
+        <div class="main_two">
+            <p class="italic">This is an inspiring quote, or a testimonial  from a customer.
+                Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+            </p>
+            <p class="bold">-Thor, God of Thunder</p>
+        </div>
+
+        <!-- main two --> 
+         <div class="main_three">
+            <div class="box">
+                <div class="three_cont">
+                    <p class="header">Call to Action! It's time!</p>
+                    <p class="content">Sign up for our product by clicking 
+                        that button right over there!
+                    </p>
+                </div>
+                <button type="submit">Sign up</button>
+            </div>
+         </div>
+
+         <!-- Footer -->
+
+         <div class="footer">
+            <h4>Copyright  ©  Cihan  ÇAKMAK  2024</h4>
+         </div>
+
+    </div>
 </body>
+
 </html>
